--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# JWT Conifg
+JWT_HEADER=Authorization
+JWT_SECRET_KEY=dbwpgnsqkqhdbwpgnsqkqhdbwpgnsqkqhdbwpgnsqkqhdbwpgnsqkqh
+ACCESS_TOKEN_EXPIRE_TIME=1800000
+REFRESH_TOKEN_EXPIRE_TIME=604800000
