--- a/Back/build.gradle
+++ b/Back/build.gradle
@@ -31,12 +31,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+//    implementation 'com.querydsl:querydsl-jpa'
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.0")
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
-    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
@@ -48,19 +51,13 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
-
 }
 
-def generatedQuerydsl = layout.buildDirectory.dir("generated/querydsl").get().asFile
-
-tasks.withType(JavaCompile) {
-    options.getGeneratedSourceOutputDirectory().set(file(generatedQuerydsl))
-}
-
-sourceSets {
-    main.java.srcDirs += [ generatedQuerydsl ]
-}
-
+def querydslSrcDir = 'src/main/generated'
 clean {
-    delete file(generatedQuerydsl)
+    delete file(querydslSrcDir)
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.generatedSourceOutputDirectory = file(querydslSrcDir)
 }
