--- a/Back/build.gradle
+++ b/Back/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.0")
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
-
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
