--- a/Back/build.gradle
+++ b/Back/build.gradle
@@ -30,12 +30,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+
+    implementation group: 'io.codef.api', name: 'easycodef-java', version: '1.0.5'
 
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
