--- a/Front/package.json
+++ b/Front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.3",
     "builder-pattern": "^2.2.0",
+    "chart.js": "^4.4.1",
     "normalize.css": "^8.0.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5",
