--- a/Front/.env
+++ b/Front/.env
@@ -1,2 +1,2 @@
-VITE_VUE_API_URL=http://localhost:8080
-VITE_VUE_API_LIVE_URL=https://i10a602.p.ssafy.io
+VITE_VUE_API_URL=https://test.mgbg.kr/link
+VITE_VUE_API_LIVE_URL=https://test.mgbg.kr/link
